# ixi_project

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/assets/: style.css
app/static/: style.css
app/templates/: index.html  results.html
data/emeddings_data/: embeddings_data.csv
data/metadata/: IXI.xls  participant_metadata.csv  participants.csv  participants.xlsx
db/: Dockerfile  alembic.ini  database_builder.py
db/ixi_app/: env.py
db/seeding/: embeddings_seeder.py  participants_seeder.py
db/utilis/: config.py  logger.py  models.py  queries.py
embeddings/embeddings_output/: IXI002-Guys-0828_t1.npy  IXI012-HH-1211_t2.npy  IXI013-HH-1212_t1.npy  IXI014-HH-1236_t1.npy  IXI015-HH-1258_t2.npy  IXI016-Guys-0697_t2.npy  IXI017-Guys-0698_t1.npy  IXI019-Guys-0702_t2.npy  IXI020-Guys-0700_t1.npy  IXI021-Guys-0703_t2.npy  IXI022-Guys-0701_t1.npy  IXI023-Guys-0699_t2.npy  IXI024-Guys-0705_t1.npy  IXI025-Guys-0852_t2.npy  IXI026-Guys-0696_t1.npy  IXI027-Guys-0710_t1.npy  IXI028-Guys-1038_t2.npy  IXI029-Guys-0829_t2.npy  IXI030-Guys-0708_t1.npy  IXI031-Guys-0797_t1.npy  IXI033-HH-1259_t1.npy  IXI034-HH-1260_t2.npy  IXI035-IOP-0873_t1.npy  IXI036-Guys-0736_t2.npy  IXI037-Guys-0704_t1.npy  IXI038-Guys-0729_t1.npy  IXI039-HH-1261_t2.npy  IXI040-Guys-0724_t2.npy  IXI041-Guys-0706_t1.npy  IXI042-Guys-0725_t1.npy  IXI044-Guys-0712_t2.npy  IXI045-Guys-0713_t1.npy  IXI046-Guys-0824_t1.npy  IXI048-HH-1326_t1.npy  (+532 more)
scripts/: 01_convertor.py  02_extract_embeddings.py  03_embeddings_csv.py
(+2 files in other folders)
