[project]
name = "ixi-nii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "nibabel>=5.3.2",
    "nii2png>=0.2.7",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
