[project]
name = "ixi-nii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "coloring>=0.1.8",
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "extensions>=0.4",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "nibabel>=5.3.2",
    "nii2png>=0.2.7",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.42",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
